--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 { 
-  "name"    : "sequencer",
-  "version" : "0.0.1",
-  "author"  : "Michiel Kalkman <michiel.kalkman@gmail.com>",
-  "main"    : "./lib/sequencer.js"
+  "name"        : "sequencer",
+  "version"     : "0.0.1",
+  "author"      : "Michiel Kalkman <michiel.kalkman@gmail.com>",
+  "directories" : { "lib" : "./lib" },
+  "main"        : "./lib/sequencer"
 }
