Updated package.json and added license

--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   { 
     "type" : "git",
     "url"  : "http://github.com/michiel/sequencer-js.git"
-  }
-
+  },
+  "description" : "Library functions to manipulate arbitrary sync/async calls" 
 }
