Updated package.json description

--- a/package.json
+++ b/package.json
@@ -9,5 +9,5 @@
     "type" : "git",
     "url"  : "http://github.com/michiel/sequencer-js.git"
   },
-  "description" : "Library functions to manipulate arbitrary sync/async calls" 
+  "description" : "Library functions to order the execution of arbitrary sync/async calls" 
 }
